--- a/src/AppXJS.cbp
+++ b/src/AppXJS.cbp
@@ -23,68 +23,83 @@
 					<Add option="-s" />
 					<Add option="-m64" />
 					<Add option="-lm -ldl -lpthread" />
+					<Add option="-lGL -lSDL2 -lGLEW" />
 					<Add directory="lib/Linux" />
 				</Linker>
 			</Target>
 			<Target title="bin windows">
-				<Option platforms="Unix;" />
 				<Option output="bin/AppXJS" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin/" />
 				<Option object_output="obj/Windows/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="mingw64__compiler" />
 				<Option projectCompilerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-fomit-frame-pointer" />
 					<Add option="-O2" />
+					<Add option="-w" />
+					<Add option="-DGLEW_STATIC" />
 				</Compiler>
+				<ResourceCompiler>
+					<Add option="-DGLEW_STATIC" />
+				</ResourceCompiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-static-libstdc++" />
 					<Add option="-lm" />
 					<Add option="-l:libwinpthread.a" />
+					<Add option="-static-libgcc -static-libstdc++" />
+					<Add option="-lSDL2" />
+					<Add option="-lglew -lopengl32 -lgdi32 -luser32 -lkernel32" />
+					<Add directory="lib" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="src/EngineJS" />
-			<Add directory="src/FileManager/nativefiledialog/include" />
+			<Add directory="include" />
+			<Add directory="include/nanovg" />
+			<Add directory="include/quickjs" />
 		</Compiler>
-		<Unit filename="src/EngineJS/quickjs/cutils.c">
+		<Unit filename="demo.c">
 			<Option compilerVar="CC" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
-		<Unit filename="src/EngineJS/quickjs/cutils.h" />
-		<Unit filename="src/EngineJS/quickjs/libbf.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="src/EngineJS/quickjs/libbf.h" />
-		<Unit filename="src/EngineJS/quickjs/libregexp-opcode.h" />
-		<Unit filename="src/EngineJS/quickjs/libregexp.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="src/EngineJS/quickjs/libregexp.h" />
-		<Unit filename="src/EngineJS/quickjs/libunicode-table.h" />
-		<Unit filename="src/EngineJS/quickjs/libunicode.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="src/EngineJS/quickjs/libunicode.h" />
-		<Unit filename="src/EngineJS/quickjs/list.h" />
-		<Unit filename="src/EngineJS/quickjs/quickjs-atom.h" />
-		<Unit filename="src/EngineJS/quickjs/quickjs-libc.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="src/EngineJS/quickjs/quickjs-libc.h" />
-		<Unit filename="src/EngineJS/quickjs/quickjs-opcode.h" />
-		<Unit filename="src/EngineJS/quickjs/quickjs.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="src/EngineJS/quickjs/quickjs.h" />
-		<Unit filename="src/EngineJS/quickjs/unicode_gen_def.h" />
-		<Unit filename="src/core/AppX_core.h" />
+		<Unit filename="include/AppX.h" />
+		<Unit filename="src/core/AppX_Render.cpp" />
+		<Unit filename="src/core/BSS.cpp" />
+		<Unit filename="src/core/Event.cpp" />
+		<Unit filename="src/core/SUI.cpp" />
+		<Unit filename="src/core/UI.cpp" />
 		<Unit filename="src/core/config_json.cpp" />
 		<Unit filename="src/core/countercycle.cpp" />
 		<Unit filename="src/core/enginejs.cpp" />
 		<Unit filename="src/core/main.cpp" />
-		<Extensions />
+		<Unit filename="src/nanovg/nanovg.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/cutils.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/libbf.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/libregexp.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/libunicode.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/quickjs-libc.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="src/quickjs/quickjs.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Extensions>
+			<debugger>
+				<search_path add="/home/Kannagi/Dropbox/MyDocument/AppX/new/src/" />
+			</debugger>
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
